Add data for day one puzzle.

--- a/Advent22/Advent22.Tests/Advent22.Tests.csproj
+++ b/Advent22/Advent22.Tests/Advent22.Tests.csproj
@@ -20,4 +20,17 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Advent22\Advent22.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData\OneData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\OneTestData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
