Renamed data files and reorganised CalorieCounting to give it an access point.

--- a/Advent22/Advent22.Tests/Advent22.Tests.csproj
+++ b/Advent22/Advent22.Tests/Advent22.Tests.csproj
@@ -25,10 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="TestData\OneData.txt">
+    <None Update="TestData\CalorieCountingData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="TestData\OneTestData.txt">
+    <None Update="TestData\CalorieCountingTestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
