Implemented RockPaperScissor solution and tests, passing advent.

--- a/Advent22/Advent22.Tests/Advent22.Tests.csproj
+++ b/Advent22/Advent22.Tests/Advent22.Tests.csproj
@@ -31,6 +31,12 @@
     <None Update="TestData\CalorieCountingTestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\TotalScoreData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\TotalScoreTestData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
