Implement day 3, part one.

--- a/Advent22/Advent22.Tests/Advent22.Tests.csproj
+++ b/Advent22/Advent22.Tests/Advent22.Tests.csproj
@@ -31,6 +31,12 @@
     <None Update="TestData\CalorieCountingTestData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\SumDuplicateItemPrioritiesData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SumDuplicateItemPrioritiesTestData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\TotalScoreData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
